[package]
name    = "xitter-notify-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { default-features = false, features = [
	"tokio",
	"json",
	"http1",
	"query",
], version = "0.8" }
bytes = "1"
http-body-util = "0.1"
hyper = { features = [ "client", "http1" ], version = "1.8" }
hyper-rustls = { default-features = false, features = [
	"http1",
	"tls12",
	"ring",
	"webpki-roots",
], version = "0.27" }
hyper-util = { features = [ "client-legacy", "http1", "tokio" ], version = "0.1" }
rusqlite = { features = [ "bundled" ], version = "0.38" }
rustls = { default-features = false, features = [ "ring", "std" ], version = "0.23" }
serde = { features = [ "derive" ], version = "1" }
serde_json = "1"
tokio = { features = [ "rt-multi-thread", "macros", "time", "sync" ], version = "1.49" }
xitter-txid = { default-features = false, git = "https://github.com/amaanq/xitter-txid" }
